feat: Implement carbon credit marketplace with listing and purchasing functionality
- Added MarketplacePage component for displaying and managing carbon credit listings.
- Integrated user credit loading and listing creation with mock data.
- Implemented buy functionality for carbon credits with session and wallet checks.
- Enhanced API service with marketplace listing retrieval and user credit fetching.
- Created utility functions for NFT approval processes.
- Updated start script to support Sepolia testnet and improved environment checks.
- Added test script for verifying Sepolia testnet connection and contract deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,9 @@ media/
 .cache/
 tmp/
 temp/
+
+# Service logs
+/tmp/django_output.log
+/tmp/ai_engine_output.log
+/tmp/nextjs_output.log
+/tmp/hardhat_output.log
