--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,7 @@
+# Blockchain Configuration (Sepolia Testnet)
+RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
+CONTRACT_ADDRESS=0xYOUR_DEPLOYED_CONTRACT_ADDRESS
+PRIVATE_KEY=your_wallet_private_key_without_0x_prefix
 
-# Django settings / secrets
-DJANGO_SECRET_KEY=change-me
-AI_ENGINE_URL=http://127.0.0.1:5000/predict
+# AI Engine
+AI_ENGINE_URL=http://127.0.0.1:8002/predict
