--- a/carbonsmart-frontend/.env.example
+++ b/carbonsmart-frontend/.env.example
@@ -1,5 +1,5 @@
-# Database (PostgreSQL)
-DATABASE_URL="postgresql://username:password@localhost:5432/carbonsmart?schema=public"
+# Database (SQLite - file will be created automatically)
+DATABASE_URL="file:./dev.db"
 
 # NextAuth Configuration
 NEXTAUTH_URL="http://localhost:3000"
@@ -10,8 +10,8 @@ NEXT_PUBLIC_API_URL="http://127.0.0.1:8000"
 NEXT_PUBLIC_AI_API_URL="http://127.0.0.1:8002"
 
 # Blockchain Configuration (Sepolia Testnet)
-NEXT_PUBLIC_CONTRACT_ADDRESS="0x_your_deployed_contract_address"
-NEXT_PUBLIC_SEPOLIA_RPC_URL="https://eth-sepolia.g.alchemy.com/v2/your_api_key"
+NEXT_PUBLIC_CONTRACT_ADDRESS="0xYOUR_DEPLOYED_CONTRACT_ADDRESS"
+NEXT_PUBLIC_SEPOLIA_RPC_URL="https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY"
 NEXT_PUBLIC_ETHERSCAN_URL="https://sepolia.etherscan.io"
 
 # WalletConnect Project ID (get from https://cloud.walletconnect.com)
